# pw-case-editor

pw_case_editor/: Doxyfile  Makefile.am  configure.in  libtool  pw_case_editor.kdevelop  pw_case_editor.kdevelop.pcs
pw_case_editor-qt/: AUTHORS  autogen.sh  pw_case_editor-qt.pro
pw_case_editor-qt/intl/: pw_case_editor-qt_pl.ts
pw_case_editor-qt/src/: case.cpp  case.h  character.cpp  character.h  clistview.cpp  clistview.h  common.h  dialogs.cpp  dialogs.h  highlighter.cpp  highlighter.h  iohandler.cpp  iohandler.h  listmanager.cpp  listmanager.h  mainwindow.cpp  mainwindow.h  pw_case_editor.cpp  resources.qrc  scriptwidget.cpp  scriptwidget.h  sprite.cpp  sprite.h  utilities.cpp  utilities.h
pw_case_editor-qt/src/ui/: bgmanager.ui  charactereditor.ui  charactermanager.ui  evidenceeditor.ui  locationeditor.ui  newcasedialog.ui
pw_case_editor/src/: Makefile.am  alphaimage.cpp  alphaimage.h  auxdialogs.cpp  auxdialogs.h  case.cpp  case.h  casecombobox.cpp  casecombobox.h  character.cpp  character.h  clistview.cpp  clistview.h  colorwidget.cpp  colorwidget.h  config.cpp  config.h  coreblockdialog.cpp  coreblockdialog.h  customizedialog.cpp  customizedialog.h  dat.dpkg  dialogs.cpp  dialogs.h  editdialogs.cpp  editdialogs.h  exceptions.h  hotspotwidget.cpp  hotspotwidget.h  iconmanager.cpp  iconmanager.h  intl.cpp  intl.h  iohandler.cpp  iohandler.h  locationwidget.cpp  locationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  (+23 more)
pw_case_player/: Doxyfile  Makefile.am  README  TODO  configure  configure.in  libtool  pw_case_player.kdevelop  pw_case_player.kdevelop.pcs
pw_case_player/config/: config.status
pw_case_player/frontends/: Makefile.am
pw_case_player/frontends/gtk/: Makefile.am  frontend_gtk.cpp  mainwindow.cpp  mainwindow.h
pw_case_player/src/: Makefile.am  application.cpp  application.h  audio.cpp  audio.h  callback.h  case.cpp  case.h  character.cpp  character.h  common.h  data.dpkg  font.cpp  font.h  fpstimer.cpp  fpstimer.h  game.cpp  game.h  intl.cpp  intl.h  iohandler.cpp  iohandler.h  pw_case_player.cpp  renderer.cpp  renderer.h  sdlcontext.cpp  sdlcontext.h  sprite.cpp  sprite.h  stock.cfg  textparser.cpp  textparser.h  texture.cpp  texture.h  theme.cpp  theme.h  theme.xml  uimanager.cpp  uimanager.h  utilities.cpp  (+1 more)
pw_case_player/src/data/fonts/: black.pwf  blue.pwf  green.pwf  orange.pwf  white.pwf
pw_case_player/src/data/gui/: answer_bar.tga  back.tga  back_on.tga  back_thin.tga  button.tga  button_arrow_large_left.tga  button_arrow_large_right.tga  button_arrow_left.tga  button_arrow_right.tga  check.tga  confirm.tga  court_bar_border.tga  court_green_bar.tga  court_record.tga  court_record_on.tga  court_record_thin.tga  evidence.tga  evidence_bar.tga  examine.tga  examine_thin.tga  large_button_left.tga  large_button_right.tga  move.tga  present.tga  present_btn.tga  present_top.tga  press_btn.tga  profiles.tga  profiles_bar.tga  select_bl.tga  select_br.tga  select_tl.tga  select_tr.tga  small_button_left.tga  small_button_right.tga  talk.tga  textbox.tga  textbox_border.tga  x_examine_btn.tga
pw_case_player/src/data/sprites/: cross_examine_bottom.pws  cross_examine_top.pws  gavel.pws  judge.pws  jury_left.pws  jury_right.pws  speedline_left.pws  speedline_right.pws  testimony_bottom.pws  testimony_top.pws
pw_case_player/src/data/stock/: blueline.tga  courtoverview.tga  courtoverview_c.tga  courtoverview_g.tga  courtroom_panorama.tga  defense_bench.tga  defense_helper_stand.tga  defense_stand.tga  examine_bar.tga  hold_it.tga  judge_stand.tga  judge_tab.tga  lowerbar_thin.tga  objection.tga  overview_judge.tga  prosecutor_bench.tga  prosecutor_stand.tga  scanlines.tga  take_that.tga  testimony.tga  topbar_thin.tga  touchscreen_lowerbar.tga  touchscreen_topbar.tga  witness_bench.tga  witness_stand.tga
pw_tools/: Makefile  block_extract.cpp  common.h
