AC_INIT(configure.in)

AC_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(pw_case_editor, 0.1)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.8.0])
PKG_CHECK_MODULES(ImageMagick, ImageMagick++ >= 6.2.4)
PKG_CHECK_MODULES(MagickWand, Wand >= 6.2.4)

AC_OUTPUT(Makefile src/Makefile update_client/Makefile)
