INCLUDES = -I/usr/include/gtkmm-2.4 -I/usr/lib/gtkmm-2.4/include \
	-I/usr/include/glibmm-2.4 -I/usr/lib/glibmm-2.4/include -I/usr/include/gdkmm-2.4 \
	-I/usr/lib/gdkmm-2.4/include -I/usr/include/pangomm-1.4 -I/usr/include/atkmm-1.6 \
	-I/usr/include/gtk-2.0 -I/usr/include/sigc++-2.0 -I/usr/lib/sigc++-2.0/include \
	-I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/lib/gtk-2.0/include \
	-I/usr/include/cairomm-1.0 -I/usr/include/pango-1.0 -I/usr/include/cairo -I/usr/include/freetype2 \
	-I/usr/include/libpng12 -I/usr/include/atk-1.0
METASOURCES = AUTO
bin_PROGRAMS = frontend_gtk
frontend_gtk_SOURCES = frontend_gtk.cpp mainwindow.cpp mainwindow.h
frontend_gtk_LDADD = -lgtkmm-2.4 -lgdkmm-2.4 -latkmm-1.6 -lgtk-x11-2.0 \
	-lpangomm-1.4 -lcairomm-1.0 -lglibmm-2.4 -lsigc-2.0 -lgdk-x11-2.0 -latk-1.0 \
	-lgdk_pixbuf-2.0 -lm -lpangocairo-1.0 -lfontconfig -lXext -lXrender -lXinerama -lXi \
	-lXrandr -lXcursor -lXcomposite -lXdamage -lpango-1.0 -lcairo -lX11 -lXfixes \
	-lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0
